# USST-CourseSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  电子报告.docx
common/: global.c  global.h  simple_string_hash_list_obj.c  simple_string_hash_list_obj.h  utf8_words.h
include/: meta.h.in  version.rc.in
libs/: AES.c  AES.h  cJSON.c  cJSON.h
meta/: VersionInfo.rc
services/: course.c  course.h  system_config.c  system_config.h  ui_gbk.c  ui_gbk.h  ui_utf8.c  ui_utf8.h  user.c  user.h
utils/: socket.c  socket.h  string_ext.c  string_ext.h  sysinfo.c  sysinfo.h
